# equip-sensor-challenge

./: README.md
sensors-api/: pyproject.toml  test.csv
sensors-api/app/: db.py  main.py  models.py  router.py
sensors-api/scripts/: populate.py
sensors-visualizer/: package-lock.json  package.json
sensors-visualizer/src/: App.css  App.tsx
sensors-visualizer/src/SensorGraph/: index.tsx
