[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gabriel Vasconcellos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pymongo = "^4.10.1"
pandas = "^2.2.3"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
